# raytracer

./: .gitignore  CMakeLists.txt
myfirstraytracer/: CMakeLists.txt  myfirstraytracer.cpp  sphere.cpp  triangle.cpp
myfirstraytracer/include/: camera.h  color.h  hitable.h  material.h  myfirstraytracer.h  ray.h  scene.h  sphere.h  vec3.h
raytracerCUDA/: CMakeLists (2).txt  CMakeLists.txt  main.cu  raytracer_cuda.h  sphere.cpp  triangle.cpp
raytracerCUDA/headers/: camera.h  color.h  hitable.h  hitable_list.h  material.h  ray.h  raytracer_cuda.h  scene.h  sphere.h  triangle.h  vec3.h
raytracerCUDA_simple/: CMakeLists.txt  camera.h  hitable.h  hitable_list.h  main.cu  ray.h  simpleRT.h  sphere.h
vkraytracer/: CMakeLists.txt  main.cpp
